# agents

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  codecov.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: conf.py  index.rst
src/: connector.py  constants.py  main.py
src/agents/: base.py  calendar.py  email.py  memory.py  planning.py  research.py  task.py
src/api/: calendar.py  email.py  web_search.py
src/db/: chroma.py
src/foundation/: llama3.py  llm.py
src/framework/: llamaindex.py  orchestration.py  shared_memory.py
src/register/: registries.py
